<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_x_translation">X translation</string>
    <string name="title_y_translation">Y translation</string>
    <string name="title_z_translation">Z translation</string>
    <string name="title_x_rotation">X rotation</string>
    <string name="title_y_rotation">Y rotation</string>
    <string name="title_z_rotation">Z rotation</string>
    <string name="title_angle_rotation">Angle rotation</string>

    <string name="title_x_setlook_eye">X eye</string>
    <string name="title_y_setlook_eye">Y eye</string>
    <string name="title_z_setlook_eye">Z eye</string>
    <string name="title_x_setlook_target">X target</string>
    <string name="title_y_setlook_target">Y target</string>
    <string name="title_z_setlook_target">Z target</string>
    <string name="title_x_setlook_up">X up</string>
    <string name="title_y_setlook_up">Y up</string>
    <string name="title_z_setlook_up">Z up</string>
</resources>