<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/background_mica"
        android:id="@+id/main_linearlayout">
    <!-- android:background="#DEB887"-->
    <android.opengl.GLSurfaceView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:id="@+id/gl_surfaceview"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:layout_marginTop="@dimen/seekbar_top_margin"
        android:id="@+id/orientation_textview"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/seekbar_top_margin"
                android:text="@string/title_x_setlook_eye"
                android:id="@+id/setlook_x_eye_textview"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:id="@+id/seekbar_x_eye"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/seekbar_top_margin"
                android:text="@string/title_y_setlook_eye"
                android:id="@+id/setlook_y_eye_textview"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:id="@+id/seekbar_y_eye"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/seekbar_top_margin"
                android:text="@string/title_z_setlook_eye"
                android:id="@+id/setlook_z_eye_textview"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:id="@+id/seekbar_z_eye"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/seekbar_top_margin"
                android:text="@string/title_x_setlook_target"
                android:id="@+id/setlook_x_target_textview"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:id="@+id/seekbar_x_target"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/seekbar_top_margin"
                android:text="@string/title_y_setlook_target"
                android:id="@+id/setlook_y_target_textview"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:id="@+id/seekbar_y_target"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/seekbar_top_margin"
                android:text="@string/title_z_setlook_target"
                android:id="@+id/setlook_z_target_textview"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:id="@+id/seekbar_z_target"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/seekbar_top_margin"
                android:text="@string/title_x_setlook_up"
                android:id="@+id/setlook_x_up_textview"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:id="@+id/seekbar_x_up"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/seekbar_top_margin"
                android:text="@string/title_y_setlook_up"
                android:id="@+id/setlook_y_up_textview"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:id="@+id/seekbar_y_up"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/seekbar_top_margin"
                android:text="@string/title_z_setlook_up"
                android:id="@+id/setlook_z_up_textview"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:id="@+id/seekbar_z_up"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/seekbar_top_margin"
                android:text="@string/title_x_rotation"
                android:id="@+id/x_rotate_textview"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="360"
                android:progress="180"
                android:id="@+id/seekbar_x_rotate"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/seekbar_top_margin"
                android:text="@string/title_y_rotation"
                android:id="@+id/y_rotate_textview"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="360"
                android:progress="180"
                android:id="@+id/seekbar_y_rotate"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/seekbar_top_margin"
                android:text="@string/title_z_rotation"
                android:id="@+id/z_rotate_textview"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="360"
                android:progress="180"
                android:id="@+id/seekbar_z_rotate"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/seekbar_top_margin"
                android:text="@string/title_x_translation"
                android:id="@+id/x_translate_textview"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="60"
                android:progress="30"
                android:id="@+id/seekbar_x_translate"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/seekbar_top_margin"
                android:text="@string/title_y_translation"
                android:id="@+id/y_translate_textview"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="60"
                android:progress="30"
                android:id="@+id/seekbar_y_translate"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/seekbar_top_margin"
                android:text="@string/title_z_translation"
                android:id="@+id/z_translate_textview"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="1000"
                android:progress="1000"
                android:id="@+id/seekbar_z_translate"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

