<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="#DEB887"
        android:id="@+id/main_linearlayout">

        <android.opengl.GLSurfaceView
            android:layout_width="match_parent"

            android:id="@+id/gl_surfaceview"
            android:layout_height="350dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/seekbar_top_margin"
            android:text="@string/title_x_rotation"
            android:id="@+id/x_rotate_textview"/>

        <android.support.v7.widget.AppCompatSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="360"
            android:progress="180"
            android:id="@+id/seekbar_x_rotate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/seekbar_top_margin"
            android:text="@string/title_y_rotation"
            android:id="@+id/y_rotate_textview"/>

        <android.support.v7.widget.AppCompatSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="360"
            android:progress="180"
            android:id="@+id/seekbar_y_rotate"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/seekbar_top_margin"
            android:text="@string/title_z_rotation"
            android:id="@+id/z_rotate_textview"/>

        <android.support.v7.widget.AppCompatSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="360"
            android:progress="180"
            android:id="@+id/seekbar_z_rotate"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/seekbar_top_margin"
            android:text="@string/title_x_translation"
            android:id="@+id/x_translate_textview"/>

        <android.support.v7.widget.AppCompatSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="60"
            android:progress="30"
            android:id="@+id/seekbar_x_translate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/seekbar_top_margin"
            android:text="@string/title_y_translation"
            android:id="@+id/y_translate_textview"/>

        <android.support.v7.widget.AppCompatSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="60"
            android:progress="30"
            android:id="@+id/seekbar_y_translate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/seekbar_top_margin"
            android:text="@string/title_z_translation"
            android:id="@+id/z_translate_textview"/>

        <android.support.v7.widget.AppCompatSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="90"
            android:progress="45"
            android:id="@+id/seekbar_z_translate"/>



    </LinearLayout>

</ScrollView>